--- a/first-service/ejb/pom.xml
+++ b/first-service/ejb/pom.xml
@@ -84,12 +84,12 @@
             <artifactId>jackson-databind-nullable</artifactId>
             <version>0.2.4</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.wildfly</groupId>-->
-<!--            <artifactId>wildfly-ejb3</artifactId>-->
-<!--            <version>34.0.1.Final</version>-->
-<!--            <scope>provided</scope>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.wildfly</groupId>
+            <artifactId>wildfly-ejb3</artifactId>
+            <version>34.0.1.Final</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
