--- a/first-service/pom.xml
+++ b/first-service/pom.xml
@@ -10,6 +10,7 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.release>17</maven.compiler.release>
     </properties>
 
     <modules>
@@ -17,114 +18,3 @@
         <module>web</module>
     </modules>
 </project>
-
-
-        <!--<project xmlns="http://maven.apache.org/POM/4.0.0"-->
-        <!--         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"-->
-        <!--         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">-->
-        <!--    <modelVersion>4.0.0</modelVersion>-->
-
-        <!--    <groupId>org.example</groupId>-->
-        <!--    <artifactId>labochka2</artifactId>-->
-        <!--    <version>1.0-SNAPSHOT</version>-->
-        <!--    <packaging>war</packaging>-->
-
-        <!--    <properties>-->
-        <!--        <maven.compiler.source>17</maven.compiler.source>-->
-        <!--        <maven.compiler.target>17</maven.compiler.target>-->
-        <!--        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
-        <!--    </properties>-->
-
-        <!--    <dependencies>-->
-        <!--        <dependency>-->
-        <!--            <groupId>org.glassfish.jersey.core</groupId>-->
-        <!--            <artifactId>jersey-server</artifactId>-->
-        <!--            <version>3.1.5</version>-->
-        <!--        </dependency>-->
-        <!--        <dependency>-->
-        <!--            <groupId>org.glassfish.jersey.containers</groupId>-->
-        <!--            <artifactId>jersey-container-servlet</artifactId>-->
-        <!--            <version>3.1.5</version>-->
-        <!--        </dependency>-->
-        <!--        <dependency>-->
-        <!--            <groupId>org.glassfish.jersey.media</groupId>-->
-        <!--            <artifactId>jersey-media-json-binding</artifactId>-->
-        <!--            <version>3.1.5</version>-->
-        <!--        </dependency>-->
-        <!--        <dependency>-->
-        <!--            <groupId>org.projectlombok</groupId>-->
-        <!--            <artifactId>lombok</artifactId>-->
-        <!--            <version>1.18.36</version>-->
-        <!--        </dependency>-->
-        <!--        <dependency>-->
-        <!--            <groupId>jakarta.persistence</groupId>-->
-        <!--            <artifactId>jakarta.persistence-api</artifactId>-->
-        <!--            <version>3.1.0</version>-->
-        <!--            <scope>provided</scope>-->
-        <!--        </dependency>-->
-        <!--        <dependency>-->
-        <!--            <groupId>jakarta.transaction</groupId>-->
-        <!--            <artifactId>jakarta.transaction-api</artifactId>-->
-        <!--            <version>2.0.1</version>-->
-        <!--        </dependency>-->
-        <!--        <dependency>-->
-        <!--            <groupId>jakarta.validation</groupId>-->
-        <!--            <artifactId>jakarta.validation-api</artifactId>-->
-        <!--            <version>3.0.2</version>-->
-        <!--            <scope>provided</scope>-->
-        <!--        </dependency>-->
-        <!--        <dependency>-->
-        <!--            <groupId>jakarta.xml.bind</groupId>-->
-        <!--            <artifactId>jakarta.xml.bind-api</artifactId>-->
-        <!--            <version>3.0.1</version>-->
-        <!--            <scope>provided</scope>-->
-        <!--        </dependency>-->
-        <!--        <dependency>-->
-        <!--            <groupId>jakarta.enterprise</groupId>-->
-        <!--            <artifactId>jakarta.enterprise.cdi-api</artifactId>-->
-        <!--            <version>4.0.1</version>-->
-        <!--            <scope>provided</scope>-->
-        <!--        </dependency>-->
-        <!--        <dependency>-->
-        <!--            <groupId>com.fasterxml.jackson.datatype</groupId>-->
-        <!--            <artifactId>jackson-datatype-jsr310</artifactId>-->
-        <!--            <version>2.15.2</version>-->
-        <!--        </dependency>-->
-        <!--        <dependency>-->
-        <!--            <groupId>com.fasterxml.jackson.core</groupId>-->
-        <!--            <artifactId>jackson-databind</artifactId>-->
-        <!--            <version>2.15.2</version>-->
-        <!--        </dependency>-->
-        <!--        <dependency>-->
-        <!--            <groupId>org.openapitools</groupId>-->
-        <!--            <artifactId>jackson-databind-nullable</artifactId>-->
-        <!--            <version>0.2.4</version>-->
-        <!--        </dependency>-->
-
-        <!--    </dependencies>-->
-
-        <!--    <build>-->
-        <!--        <finalName>human-service</finalName>-->
-        <!--        <plugins>-->
-        <!--            <plugin>-->
-        <!--                <groupId>org.apache.maven.plugins</groupId>-->
-        <!--                <artifactId>maven-compiler-plugin</artifactId>-->
-        <!--                <version>3.11.0</version>-->
-        <!--                <configuration>-->
-        <!--                    <source>${maven.compiler.source}</source>-->
-        <!--                    <target>${maven.compiler.target}</target>-->
-        <!--                </configuration>-->
-        <!--            </plugin>-->
-        <!--            <plugin>-->
-        <!--                <groupId>org.apache.maven.plugins</groupId>-->
-        <!--                <artifactId>maven-war-plugin</artifactId>-->
-        <!--                <version>3.3.2</version>-->
-        <!--                <configuration>-->
-        <!--                    <failOnMissingWebXml>false</failOnMissingWebXml>-->
-        <!--                </configuration>-->
-        <!--            </plugin>-->
-        <!--        </plugins>-->
-        <!--    </build>-->
-
-
-        <!--</project>-->
